AboutSystem: initialize member variables before use.

Make sure that the replicant doesn't uses unitialized member variables.

Fixes #17955.

Change-Id: If75354216b9731b3273d79aec787cd0140a6175e